# mario_tauri

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: build.yml
backend/cmd/server/: main.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: db.go
backend/internal/handler/: auth.go  category_item.go  handler.go  order_bill.go  realtime.go  system.go  table.go
backend/internal/middleware/: auth_test.go
backend/internal/models/: models.go
backend/internal/queue/: bill_queue.go  cleanup.go
backend/internal/realtime/: hub_test.go
backend/internal/repository/: redis_cache.go  repository.go
frontend/: .env.development  .env.example  Dockerfile.windows-cross  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: mario-printer
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/mario-printer/: go.mod  go.sum  main.go
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/printer/: mod.rs  models.rs  renderer.rs  service.rs  service_go.rs  service_windows.rs  utils.rs
frontend/src/components/: BillModal.tsx  BusinessSettings.tsx  History.tsx  Layout.tsx  OrderModal.tsx  ParcelOrderModal.tsx  Reports.tsx  Tables.tsx  TopSellingCategoriesReport.tsx  TopSellingItemsReport.tsx
frontend/src/services/: api.ts  printer.ts  realtime.ts
frontend/src/stores/: authStore.ts  dataStore.ts
frontend/src/types/: electron.d.ts
frontend/src/utils/: cache.test.ts  csvExport.ts  (+3 more)
