[package]
name = "mario-juicy"
version = "1.2.0"
description = "Mario Juicy POS System"
authors = ["you"]
edition = "2021"

[lib]
name = "mario_juicy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
qrcode = "0.14"
base64 = "0.22"

