[package]
name = "mario-juicy"
version = "1.2.0"
description = "Mario Juicy POS System"
authors = ["you"]
edition = "2021"

[lib]
name = "mario_juicy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable to use the Go mario-printer sidecar instead of the native Rust printer.
# Build with: cargo build --features go-printer
# The Go binary must be compiled separately and placed alongside the Tauri binary.
go-printer = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# USB printer access (macOS/Linux only — not used on Windows or with go-printer)
[target.'cfg(not(target_os = "windows"))'.dependencies]
rusb = "0.9"

